@@ -50,9 +50,9 @@
 		  <property name="rules_hint">True</property>
 		  <property name="reorderable">False</property>
 		  <property name="enable_search">True</property>
-		  <signal name="row_expanded" handler="cat_row_expanded" last_modification_time="Fri, 22 Oct 2004 17:33:36 GMT"/>
-		  <signal name="row_activated" handler="cat_row_activated" last_modification_time="Sat, 23 Oct 2004 14:45:56 GMT"/>
-		  <signal name="button_press_event" handler="cat_tree_button_press_event" last_modification_time="Sat, 23 Oct 2004 20:30:03 GMT"/>
+		  <signal name="row_expanded" handler="pl3_cat_row_expanded" last_modification_time="Mon, 25 Oct 2004 05:44:21 GMT"/>
+		  <signal name="row_activated" handler="pl3_cat_row_activated" last_modification_time="Mon, 25 Oct 2004 05:44:07 GMT"/>
+		  <signal name="button_press_event" handler="pl3_cat_tree_button_press_event" last_modification_time="Mon, 25 Oct 2004 05:44:15 GMT"/>
 		</widget>
 	      </child>
 	    </widget>
@@ -80,7 +80,7 @@
 		  <property name="rules_hint">True</property>
 		  <property name="reorderable">False</property>
 		  <property name="enable_search">True</property>
-		  <signal name="row_activated" handler="playlist_row_activated" last_modification_time="Sat, 23 Oct 2004 14:56:32 GMT"/>
+		  <signal name="row_activated" handler="pl3_playlist_row_activated" last_modification_time="Mon, 25 Oct 2004 05:47:00 GMT"/>
 		</widget>
 	      </child>
 	    </widget>
