@@ -1,3 +1,9 @@
+25-10-2004 Qball <Qball@qballcow.nl>
+	* src/playlist3.c:	Moved code around, improved function naming.
+	* src/playlist3.c:	Added replacing in the right mouse menu for
+	real
+	* src/playlist3.c:	Added right mouse menu for artist browser.
+
 24-10-2004 Qball <Qball@qballcow.nl>
 	* src/playlist3.c:	Moved code around, improved function naming.
 	* sr/cplaylist3.c:	Added replace option in right mouse menu.
